opam-version: "2.0"
version: "1.0"
maintainer: "ilya.sergey@yale-nus.edu.sc"
homepage: "https://ilyasergey.net/YSC2229/"
dev-repo: "git://github.com:ilyasergey/ysc2229-geometry.git"
bug-reports: "https://github.com/ilyasergey/ysc2229-geometry/issues"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]

install: [ make ]
depends: [

 ]

description: "Basic algorithms of Computational Geometry for the 
Introductory Data Structures and Algorithms (YSC2229) class"

tags: [
  "category:Computer Science/Education/Basic Algorithms and Data Structures"
  "keyword:tutorial"
  "keyword:graphics"
]

authors: [
  "Ilya Sergey <ilya.sergey@yale-nus.edu.sg>"
]

