(library
 (name ysc2229_geometry)
 (public_name ysc2229-geometry)
  (inline_tests)                
  (preprocess (pps ppx_inline_test ppx_expect))
  (wrapped false)
  (libraries graphics ysc2229-part-one ysc2229-part-two core_kernel batteries) 
  (synopsis "Elementary algorithms of Computational Geometry"))
